--- a/198. House Robber.ipynb
+++ b/198. House Robber.ipynb
@@ -64,6 +64,44 @@
     "print(sum(a[1:]))\n",
     "print(sum(a[:-1]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def rob(self, nums, i = -1):\n",
+    "        if len(nums)==0:\n",
+    "            return 0\n",
+    "        elif len(nums)==1:\n",
+    "            return nums[0]\n",
+    "        \n",
+    "        p = [-1] * len(nums)\n",
+    "        p[0] = nums[0]\n",
+    "        p[1] = max(nums[:2])\n",
+    "        \n",
+    "        for i in range(2, len(p)):\n",
+    "            p[i] = max(p[i-1], p[i-2]+nums[i])\n",
+    "        \n",
+    "        return p[-1]\n",
+    "\n",
+    "\n",
+    "s = Solution()\n",
+    "s.rob([2,7,9,3,1,1])"
+   ]
   }
  ],
  "metadata": {
