--- a/001. Two Sum.ipynb
+++ b/001. Two Sum.ipynb
@@ -43,6 +43,39 @@
     "s.twoSum([3,3], 6)\n",
     "s.twoSum([3,2,4], 6)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution(object):\n",
+    "    def twoSum(self, nums, target):\n",
+    "        m = {}\n",
+    "        \n",
+    "        for i,n in enumerate(nums):\n",
+    "            if target-n in m:\n",
+    "                return [m[target-n], i]\n",
+    "            else:\n",
+    "                m[n]=i\n",
+    "        return []\n",
+    "    \n",
+    "s = Solution()\n",
+    "s.twoSum([3,3], 6)\n",
+    "s.twoSum([3,2,4], 0)"
+   ]
   }
  ],
  "metadata": {
