--- a/322. Coin Change.ipynb
+++ b/322. Coin Change.ipynb
@@ -2,18 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 4, 4, 4]\n",
+      "[0, 4, 4, 4]\n",
+      "[0, 1, 4, 4]\n",
+      "[0, 1, 1, 4]\n",
+      "[0, 1, 1, 4]\n",
+      "[0, 1, 1, 2]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "20"
+       "2"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,8 +50,53 @@
     "\n",
     "s = Solution()\n",
     "#s.coinChange(coins = [27,9,3,1], amount = 91)\n",
-    "#s.coinChange(coins = [2], amount = 3)\n",
-    "s.coinChange(coins=[186,419,83,408], amount=6249)"
+    "s.coinChange(coins = [2,1], amount = 3)\n",
+    "#s.coinChange(coins=[186,419,83,408], amount=6249)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 4 [0, 4, 4, 4]\n",
+      "1 1 1 [0, 1, 4, 4]\n",
+      "2 2 1 [0, 1, 1, 4]\n",
+      "2 1 1 [0, 1, 1, 4]\n",
+      "3 2 2 [0, 1, 1, 2]\n",
+      "3 1 2 [0, 1, 1, 2]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def coinChange1(self, coins, amount):\n",
+    "        dp = [amount+1] * (amount + 1)\n",
+    "        \n",
+    "        dp[0] = 0\n",
+    "        for i in range(1, amount + 1):\n",
+    "            for c in coins:\n",
+    "                dp[i] = min(dp[i], dp[i-c]+1)\n",
+    "                \n",
+    "        res = dp[amount]\n",
+    "        \n",
+    "        return dp[amount] if  dp[amount]<amount+1 else -1\n",
+    "s = Solution()\n",
+    "s.coinChange1(coins = [2,1], amount = 3)\n"
    ]
   }
  ],
