--- a/746. Min Cost Climbing Stairs.ipynb
+++ b/746. Min Cost Climbing Stairs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "2"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,9 +40,56 @@
     "            curr_cost + self.p[(n+2)]\n",
     "        )\n",
     "        \n",
-    "        \n",
     "s = Solution()\n",
     "s.minCostClimbingStairs([1,3,1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 1, 3] 2\n",
+      "[1, 3] 1\n",
+      "[1, 3, 1] 2\n",
+      "[2, 3, 2] 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    \n",
+    "    def minCostClimbingStairs(self, cost, n=-1):\n",
+    "        n = len(cost)\n",
+    "        p = [0] *(n+1)\n",
+    "        \n",
+    "        if n == 2:\n",
+    "            return min(cost)\n",
+    "\n",
+    "        p[0] = cost[0]\n",
+    "        p[1] = cost[1]\n",
+    "\n",
+    "        for i in range(2,n+1):\n",
+    "            p[i] = min(p[i-1], p[i-2]) + (0 if i==n else cost[i])\n",
+    "\n",
+    "        return p[n]\n",
+    "        \n",
+    "s = Solution()\n",
+    "\n",
+    "inputs = [\n",
+    "    [1,3,1,3],\n",
+    "    [1,3],\n",
+    "    [1,3,1],\n",
+    "    [2,3,2]\n",
+    "]\n",
+    "\n",
+    "for i in inputs:\n",
+    "    print(i, s.minCostClimbingStairs(i))\n",
+    "    "
    ]
   }
  ],
