--- a/198. House Robber.ipynb
+++ b/198. House Robber.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "12"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
     "        \n",
     "        p = [-1] * len(nums)\n",
     "        p[0] = nums[0]\n",
-    "        p[1] = max(nums[:2])\n",
+    "        p[1] = nums[1]\n",
     "        \n",
     "        for i in range(2, len(p)):\n",
     "            p[i] = max(p[i-1], p[i-2]+nums[i])\n",
