--- a/15_3Sum.ipynb
+++ b/15_3Sum.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "15. 3Sum.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMg/T1gw+gp0BlvakcJw9HE",
+      "authorship_tag": "ABX9TyN3/JtJVZxTqVxMoK/D407f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,16 @@
       ],
       "metadata": {
         "id": "0Ft5TdiEVy7a"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Solution 1\n",
+        "`complexity = O(n^3)`"
+      ],
+      "metadata": {
+        "id": "LKr3Du4LeIrp"
       }
     },
     {
@@ -92,6 +102,16 @@
         "s = Solution()\n",
         "s.threeSum(nums = [-1,0,1,2,-1,-4])"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Solution 2\n",
+        "`complexity = O(n^2 + nm)`"
+      ],
+      "metadata": {
+        "id": "cWYRt3LDeX_J"
+      }
     },
     {
       "cell_type": "code",
@@ -157,6 +177,27 @@
           "execution_count": 17
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Solution 3\n",
+        "`complexity = O(??)`"
+      ],
+      "metadata": {
+        "id": "eJBR8UQ8ecyF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "1S2iMNOMedXq"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
