--- a/15_3Sum.ipynb
+++ b/15_3Sum.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "15. 3Sum.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN3/JtJVZxTqVxMoK/D407f",
+      "authorship_tag": "ABX9TyME8X6gimRZnFCuK8jKlUvu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -157,7 +157,7 @@
         "id": "ash6z7sVZFKs",
         "outputId": "2a881d13-b25d-49f9-f264-8adc9db3118e"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,7 +182,7 @@
       "cell_type": "markdown",
       "source": [
         "# Solution 3\n",
-        "`complexity = O(??)`"
+        "`complexity = O(n^2)`"
       ],
       "metadata": {
         "id": "eJBR8UQ8ecyF"
@@ -191,13 +191,127 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "class Solution(object):\n",
+        "    def threeSum(self, nums):\n",
+        "        \"\"\"\n",
+        "        :type nums: List[int]\n",
+        "        :rtype: List[List[int]]\n",
+        "        \"\"\"\n",
+        "        nums.sort()\n",
+        "        n = len(nums)\n",
+        "        l = set()\n",
+        "\n",
+        "        for j in range(1, n-1):\n",
+        "          i = j-1\n",
+        "          k = j+1\n",
+        "\n",
+        "          while 0<=i<j:\n",
+        "            s2 = nums[i] + nums[j]\n",
+        "            s2_ = 0 - s2\n",
+        "            while k<n-1 and nums[k]<s2_:\n",
+        "              k += 1\n",
+        "            if nums[k] == s2_:\n",
+        "              l.add(tuple([nums[i], nums[j], nums[k]]))\n",
+        "            i-=1\n",
+        "          print(\"-\", l)\n",
+        "        return [list(t) for t in l]\n",
+        "\n",
+        "\n",
+        "s = Solution()\n",
+        "#s.threeSum(nums = [-1,0,1,2,-1,-4])\n",
+        "s.threeSum(nums = [-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-4])"
       ],
       "metadata": {
-        "id": "1S2iMNOMedXq"
+        "id": "1S2iMNOMedXq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "41d5273e-711f-484e-fec6-eb65fb3d6ffa"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "- set()\n",
+            "- {(-1, -1, 2)}\n",
+            "- {(-1, -1, 2)}\n",
+            "- {(-1, -1, 2)}\n",
+            "- {(-1, -1, 2)}\n",
+            "- {(-1, -1, 2)}\n",
+            "- {(-1, -1, 2)}\n",
+            "- {(-1, -1, 2)}\n",
+            "- {(-1, -1, 2)}\n",
+            "- {(-1, -1, 2)}\n",
+            "- {(-1, -1, 2)}\n",
+            "- {(-1, -1, 2)}\n",
+            "- {(-1, -1, 2)}\n",
+            "- {(-1, -1, 2)}\n",
+            "- {(-1, -1, 2)}\n",
+            "- {(-1, -1, 2)}\n",
+            "- {(-1, -1, 2), (-1, 0, 1)}\n",
+            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
+            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
+            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
+            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
+            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
+            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
+            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
+            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
+            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
+            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
+            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
+            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
+            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
+            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
+            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
+            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0), (-4, 2, 2)}\n",
+            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0), (-4, 2, 2)}\n",
+            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0), (-4, 2, 2)}\n",
+            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0), (-4, 2, 2)}\n",
+            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0), (-4, 2, 2)}\n",
+            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0), (-4, 2, 2)}\n",
+            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0), (-4, 2, 2)}\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[-1, -1, 2], [-1, 0, 1], [0, 0, 0], [-4, 2, 2]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sorted([-1,0,1,2,-1,-4])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HYE4dfITkWWu",
+        "outputId": "6c4b3e9f-2952-42ba-df9a-40b134d82ef9"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[-4, -1, -1, 0, 1, 2]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
     }
   ]
 }
