--- a/15_3Sum.ipynb
+++ b/15_3Sum.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "15. 3Sum.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyME8X6gimRZnFCuK8jKlUvu",
+      "authorship_tag": "ABX9TyM2U4kYyyWCnDg7ntO4IyzE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -200,6 +200,7 @@
         "        nums.sort()\n",
         "        n = len(nums)\n",
         "        l = set()\n",
+        "        print(n)\n",
         "\n",
         "        for j in range(1, n-1):\n",
         "          i = j-1\n",
@@ -213,77 +214,122 @@
         "            if nums[k] == s2_:\n",
         "              l.add(tuple([nums[i], nums[j], nums[k]]))\n",
         "            i-=1\n",
-        "          print(\"-\", l)\n",
+        "        print(\"-\", l)\n",
         "        return [list(t) for t in l]\n",
         "\n",
         "\n",
         "s = Solution()\n",
         "#s.threeSum(nums = [-1,0,1,2,-1,-4])\n",
-        "s.threeSum(nums = [-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-4])"
+        "s.threeSum(nums = [\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-9\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-7\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-9\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-7\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-5\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,9\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,8\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,7\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,2\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,3\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,4\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,5\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,3\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-3\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-5\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-9\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-7\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-9\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-7\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-5\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,9\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,8\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,7\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,2\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,3\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,4\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,5\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,3\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-3\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-5\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-9\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-7\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-9\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-7\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-5\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,9\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,8\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,7\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,2\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,3\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,4\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,5\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,3\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-3\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-5\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-9\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-7\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-9\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-7\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-5\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,9\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,8\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,7\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,2\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,3\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,4\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,5\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,3\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-3\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-5\n",
+        "                   -1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-1,0,1,2,-1,-4])"
       ],
       "metadata": {
         "id": "1S2iMNOMedXq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "41d5273e-711f-484e-fec6-eb65fb3d6ffa"
+        "outputId": "8f05edab-4f1d-45db-b1ba-eec49a75c9bd"
       },
-      "execution_count": 32,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "- set()\n",
-            "- {(-1, -1, 2)}\n",
-            "- {(-1, -1, 2)}\n",
-            "- {(-1, -1, 2)}\n",
-            "- {(-1, -1, 2)}\n",
-            "- {(-1, -1, 2)}\n",
-            "- {(-1, -1, 2)}\n",
-            "- {(-1, -1, 2)}\n",
-            "- {(-1, -1, 2)}\n",
-            "- {(-1, -1, 2)}\n",
-            "- {(-1, -1, 2)}\n",
-            "- {(-1, -1, 2)}\n",
-            "- {(-1, -1, 2)}\n",
-            "- {(-1, -1, 2)}\n",
-            "- {(-1, -1, 2)}\n",
-            "- {(-1, -1, 2)}\n",
-            "- {(-1, -1, 2), (-1, 0, 1)}\n",
-            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
-            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
-            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
-            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
-            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
-            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
-            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
-            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
-            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
-            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
-            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
-            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
-            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
-            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
-            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0)}\n",
-            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0), (-4, 2, 2)}\n",
-            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0), (-4, 2, 2)}\n",
-            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0), (-4, 2, 2)}\n",
-            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0), (-4, 2, 2)}\n",
-            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0), (-4, 2, 2)}\n",
-            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0), (-4, 2, 2)}\n",
-            "- {(-1, -1, 2), (-1, 0, 1), (0, 0, 0), (-4, 2, 2)}\n"
+            "3901\n",
+            "- {(-1, -1, 2), (-8, 0, 8), (-4, 0, 4), (-4, 1, 3), (-4, 2, 2), (-10, 2, 8), (-10, 3, 7), (-10, 4, 6), (-1, 0, 1), (-6, -1, 7), (-4, -4, 8), (0, 0, 0), (-8, 1, 7), (-6, 0, 6), (-6, 2, 4), (-8, 2, 6), (-6, 3, 3), (-8, 4, 4)}\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[[-1, -1, 2], [-1, 0, 1], [0, 0, 0], [-4, 2, 2]]"
+              "[[-1, -1, 2],\n",
+              " [-8, 0, 8],\n",
+              " [-4, 0, 4],\n",
+              " [-4, 1, 3],\n",
+              " [-4, 2, 2],\n",
+              " [-10, 2, 8],\n",
+              " [-10, 3, 7],\n",
+              " [-10, 4, 6],\n",
+              " [-1, 0, 1],\n",
+              " [-6, -1, 7],\n",
+              " [-4, -4, 8],\n",
+              " [0, 0, 0],\n",
+              " [-8, 1, 7],\n",
+              " [-6, 0, 6],\n",
+              " [-6, 2, 4],\n",
+              " [-8, 2, 6],\n",
+              " [-6, 3, 3],\n",
+              " [-8, 4, 4]]"
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 40
         }
       ]
     },
