--- a/314_Binary_Tree_Vertical_Order_Traversal.ipynb
+++ b/314_Binary_Tree_Vertical_Order_Traversal.ipynb
@@ -6,7 +6,7 @@
       "name": "314. Binary Tree Vertical Order Traversal.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMd5Zv8alu9eUbcgN08asqp",
+      "authorship_tag": "ABX9TyPNrKbXFdcUCJmrD3p5YGJa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "abL173Te9lY8"
       },
@@ -108,9 +108,15 @@
         "        seed = deque()\n",
         "        if root:\n",
         "            seed.append((root, 0, 0))\n",
+        "        min_c = 0\n",
+        "        max_c = 0\n",
         "\n",
         "        while seed:\n",
         "          n,h,c = seed.popleft()\n",
+        "\n",
+        "          min_c = min(c, min_c)\n",
+        "          max_c = max(c, max_c)\n",
+        "\n",
         "          if c not in M:\n",
         "            M[c] = []\n",
         "          M[c].append(n.val)\n",
@@ -119,8 +125,7 @@
         "            seed.append((n.left, h+1, c-1))\n",
         "          if n.right:\n",
         "            seed.append((n.right, h+1, c+1))\n",
-        "        print(M)\n",
-        "        result = [M[c]for c in sorted(M)]\n",
+        "        result = [M[c]for c in range(min_c, max_c+1)]\n",
         "        return result\n",
         "\n"
       ]
