--- a/0001-0200/0003_longest_substring_without_repeating_characters.ipynb
+++ b/0001-0200/0003_longest_substring_without_repeating_characters.ipynb
@@ -57,6 +57,38 @@
         "        \n",
         "        return max_len\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Solution:\n",
+        "    def lengthOfLongestSubstring(self, s: str) -> int:\n",
+        "        n = len(s)\n",
+        "        if n < 2:\n",
+        "            return n\n",
+        "        \n",
+        "        seen = set()\n",
+        "        seen.add(s[0])\n",
+        "        \n",
+        "        l = 0\n",
+        "        r = 1\n",
+        "        max_len = 1\n",
+        "        while r<n:\n",
+        "            while s[r] in seen and l<r:\n",
+        "                seen.remove(s[l])\n",
+        "                l+=1\n",
+        "            seen.add(s[r])\n",
+        "            max_len = max(r - l + 1, max_len)\n",
+        "            r += 1\n",
+        "        return max_len\n",
+        "                \n",
+        "            "
+      ],
+      "metadata": {
+        "id": "eaLZ88Ljx-85"
+      },
+      "execution_count": 1,
+      "outputs": []
     }
   ],
   "metadata": {
