--- a/77_Combinations.ipynb
+++ b/77_Combinations.ipynb
@@ -1,21 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "77. Combinations.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyMnRv4bvFK+rMvXv7xmp2fZ",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -29,16 +12,16 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "[https://leetcode.com/problems/combinations/]"
-      ],
       "metadata": {
         "id": "BHJ-37aZHj69"
-      }
+      },
+      "source": [
+        "[https://leetcode.com/problems/combinations/]"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -48,8 +31,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[[1, 2], [1, 3], [1, 4], [2, 3], [2, 4], [3, 4]]\n",
             "[[1]]\n"
@@ -83,35 +66,93 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UfQJs7EPNawx"
+      },
       "source": [
-        "a = [1,2,3]\n",
-        "a.pop(0)\n",
-        "a.append(9,0)\n",
-        "print(a)"
-      ],
+        "# Study Solution\n",
+        "* its crazy ignore"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 36,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 218
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Jekp4XMmI0dX",
-        "outputId": "375e6ed5-c961-4894-d1d0-dbe763dcf9c7"
+        "outputId": "9b27ac19-3eec-43f0-bbc6-8f6dd3f9c86e"
       },
-      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-6-7521d476b5ed>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: append() takes exactly one argument (2 given)"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--------------------------------------------------------------------------------\n",
+            "0 [1, 2, 5] [[1, 2]]\n",
+            "1 [1, 3, 5] [[1, 2], [1, 3]]\n",
+            "0 [2, 3, 5] [[1, 2], [1, 3], [2, 3]]\n",
+            "1 [1, 4, 5] [[1, 2], [1, 3], [2, 3], [1, 4]]\n",
+            "0 [2, 4, 5] [[1, 2], [1, 3], [2, 3], [1, 4], [2, 4]]\n",
+            "0 [3, 4, 5] [[1, 2], [1, 3], [2, 3], [1, 4], [2, 4], [3, 4]]\n",
+            "[[1, 2], [1, 3], [2, 3], [1, 4], [2, 4], [3, 4]]\n",
+            "--------------------------------------------------------------------------------\n",
+            "0 [1, 2] [[1]]\n",
+            "[[1]]\n"
           ]
         }
+      ],
+      "source": [
+        "class Solution:\n",
+        "    def combine(self, n: int, k: int):\n",
+        "        # init first combination\n",
+        "        nums = list(range(1, k + 1)) + [n + 1]\n",
+        "        \n",
+        "        output, j = [], 0\n",
+        "        while j < k:\n",
+        "            # add current combination\n",
+        "            output.append(nums[:k])\n",
+        "            print(j, nums, output)\n",
+        "            # increase first nums[j] by one\n",
+        "            # if nums[j] + 1 != nums[j + 1]\n",
+        "            j = 0\n",
+        "            while j < k and nums[j + 1] == nums[j] + 1:\n",
+        "                nums[j] = j + 1\n",
+        "                j += 1\n",
+        "            nums[j] += 1\n",
+        "            \n",
+        "        return output\n",
+        "\n",
+        "s = Solution()\n",
+        "\n",
+        "inputs = [\n",
+        "  (4,2),\n",
+        "  (1,1)\n",
+        "]\n",
+        "\n",
+        "for n,k in inputs:\n",
+        "  print(\"-\"*80)\n",
+        "  print(s.combine(n,k))\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "77. Combinations.ipynb",
+      "provenance": [],
+      "authorship_tag": "ABX9TyNSqJ+UXynUh2ynK+/9J2hF",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
