--- a/120_Triangle.ipynb
+++ b/120_Triangle.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "120. Triangle.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN1PSXjuYpv/X7V97zXJB4F",
+      "authorship_tag": "ABX9TyM+B/jAbWwtNwEnNnY/lBxZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Bottom Up"
+        "# Bottom Up :thumbsup:"
       ],
       "metadata": {
         "id": "fx7qvEz0085S"
