--- a/120_Triangle.ipynb
+++ b/120_Triangle.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "120. Triangle.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM+B/jAbWwtNwEnNnY/lBxZ",
+      "authorship_tag": "ABX9TyPTFvtejRN9UiUSGVLEsu5Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Bottom Up :thumbsup:"
+        "# Bottom Up 👍"
       ],
       "metadata": {
         "id": "fx7qvEz0085S"
@@ -202,7 +202,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Old Solution"
+        "# Old Solution 👍"
       ],
       "metadata": {
         "id": "PJhvPHLs8uzr"
@@ -253,9 +253,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "utk1ucyZ8uX0",
-        "outputId": "0bfd2c44-b1ea-4ec2-9958-004aed2666dc"
+        "outputId": "d883bb1b-cf45-4d59-d8d1-7505a5fd2a1e"
       },
-      "execution_count": 18,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
