--- a/261_Graph_Valid_Tree.ipynb
+++ b/261_Graph_Valid_Tree.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "261. Graph Valid Tree.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPHKQ6pPY/9+PL4uRuVj+DS",
+      "authorship_tag": "ABX9TyPB9WC9TIzNfUz5DpFt0UVf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,14 +38,23 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 👿⭐👿⭐👿⭐👿 **Needs to be studied** 👿⭐👿⭐👿⭐👿"
+      ],
+      "metadata": {
+        "id": "LQb-tla6u91V"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "AqzqyZahK1Fr",
-        "outputId": "ee8a1112-d21c-4957-b69c-41121805943a"
+        "outputId": "203fc8b1-95f8-46fe-c071-8423486e661b"
       },
       "outputs": [
         {
@@ -54,6 +63,11 @@
           "text": [
             "________________________________________\n",
             "[[1, 2, 3], [0, 4], [0], [0], [1]]\n",
+            "0 [1, 2, 3]\n",
+            "3 [0]\n",
+            "2 [0]\n",
+            "1 [0, 4]\n",
+            "4 [1]\n",
             "{0: -1, 1: 0, 2: 0, 3: 0, 4: 1}\n",
             "True True [[0, 1], [0, 2], [0, 3], [1, 4]]\n",
             "________________________________________\n",
@@ -62,14 +76,29 @@
             "False False [[0, 1], [2, 3]]\n",
             "________________________________________\n",
             "[[]]\n",
+            "0 []\n",
             "{0: -1}\n",
             "True True []\n",
             "________________________________________\n",
             "[[2], [2], [0, 1]]\n",
+            "0 [2]\n",
+            "2 [0, 1]\n",
+            "1 [2]\n",
             "{0: -1, 2: 0, 1: 2}\n",
             "True True [[2, 0], [2, 1]]\n",
             "________________________________________\n",
+            "[[1, 2], [0], [0]]\n",
+            "0 [1, 2]\n",
+            "2 [0]\n",
+            "1 [0]\n",
+            "{0: -1, 1: 0, 2: 0}\n",
+            "True True [[0, 1], [2, 0]]\n",
+            "________________________________________\n",
             "[[1], [0, 2], [3, 1], [2]]\n",
+            "0 [1]\n",
+            "1 [0, 2]\n",
+            "2 [3, 1]\n",
+            "3 [2]\n",
             "{0: -1, 1: 0, 2: 1, 3: 2}\n",
             "True True [[0, 1], [2, 3], [1, 2]]\n",
             "________________________________________\n",
@@ -94,6 +123,7 @@
         "        \n",
         "        while stack:\n",
         "            node = stack.pop()\n",
+        "            print(node, adj_list[node])\n",
         "            for neighbour in adj_list[node]:\n",
         "                if neighbour == parent[node]:\n",
         "                    continue\n",
@@ -111,6 +141,7 @@
         "    (4, [[0,1],[2,3]], False),\n",
         "    (1, [], True),\n",
         "    (3, [[2,0],[2,1]], True),\n",
+        "    (3, [[0,1],[2,0]], True),\n",
         "    (4, [[0,1],[2,3],[1,2]], True),\n",
         "    (3, [[1,0],[0,2],[2,1]], False)\n",
         "]\n",
