--- a/12_Integer_to_Roman.ipynb
+++ b/12_Integer_to_Roman.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "12. Integer to Roman.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOSwZJF1Yj2XoufAsBLcqK0",
+      "authorship_tag": "ABX9TyNscp8MXNx6xvDrvTSygZSG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,7 @@
         "\n",
         "        ans = \"\"\n",
         "\n",
-        "        print(list(d.keys())[::-1])\n",
+        "        #print(list(d.keys())[::-1])\n",
         "        for k in list(d.keys())[::-1]:\n",
         "            if num < k:\n",
         "                pass\n",
@@ -70,8 +70,9 @@
         "                while num >= k:\n",
         "                    num = num - k\n",
         "                    ans += d[k]\n",
+        "                    #print(num,k,d[k],ans)\n",
         "\n",
-        "        return ans        "
+        "        return ans"
       ]
     }
   ]
